--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:allowBackup="true"
+        android:name=".PolApp"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:allowBackup="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -27,6 +28,9 @@
             android:name=".LoginActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".EditActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
-
 </manifest>
